fix dark mode toggle line height changes not applying

--- a/style.less
+++ b/style.less
@@ -83,7 +83,7 @@ body {
             font-size: 1.5rem;
         }
         label, input {
-            line-height: 1.5rem;
+            line-height: 1.5rem !important;
         }
     }
     @media screen and (max-width: 30rem) {
@@ -91,7 +91,7 @@ body {
             font-size: 1.25rem;
         }
         label, input {
-            line-height: 1.25rem;
+            line-height: 1.25rem !important;
         }
     }
 }
